--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/jest": "^29.5.3",
+    "bun-types": "latest",
+    "eslint": "^8.42.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.3",
+    "ts-node": "^10.9.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -14,8 +24,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
-    "scripts": {
-      "start": "bun run index.ts",
-      "build": "tsc"
-    }
+  "scripts": {
+    "test": "jest --passWithNoTests",
+    "clean": "rm -rf ./lib",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint --fix src/**/*.ts"
+  }
 }
