--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
           cwd: "./"
           files: |
             .env.dist
+            docker/
             src/
             captain-definition
             Dockerfile
