--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.3",
     "bun-types": "latest",
     "eslint": "^8.42.0",
@@ -12,8 +13,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.1.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
