--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.3",
+    "@types/rss": "^0.0.32",
     "bun-types": "latest",
     "eslint": "^8.42.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
@@ -23,7 +24,8 @@
     "axios": "^1.6.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "rss": "^1.2.2"
   },
   "scripts": {
     "start": "bun index.ts",
