--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joshlopes/radarr-in-cinemas",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -28,10 +28,12 @@
     "rss": "^1.2.2"
   },
   "scripts": {
-    "start": "bun index.ts",
-    "test": "jest --passWithNoTests",
-    "clean": "rm -rf ./lib",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint --fix src/**/*.ts"
+    "start": "ts-node src/index.ts",
+    "start:watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "check:type": "tsc --noEmit",
+    "test": "npx jest --silent",
+    "lint": "npm run check:type && npx eslint src/**/*.ts",
+    "lint:fix": "npx eslint . --fix",
+    "build": "tsc -p ."
   }
 }
