--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start": "ts-node src/index.ts",
     "start:watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "check:type": "tsc --noEmit",
-    "test": "npx jest --silent",
+    "test": "npx jest --silent --passWithNoTests",
     "lint": "npm run check:type && npx eslint src/**/*.ts",
     "lint:fix": "npx eslint . --fix",
     "build": "tsc -p ."
