--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "timezone": "Europe/London",
   "extends": [
     "config:base"
+  ],
+  "schedule": [
+    "on friday"
   ],
   "lockFileMaintenance": {
     "enabled": true,
@@ -10,6 +14,11 @@
   "packageRules": [
     {
       "matchDepTypes": ["devDependencies"],
+      "automerge": true
+    },
+    {
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchCurrentVersion": "!/^0/",
       "automerge": true
     }
   ]
