--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "joshlopes/radarr-in-cinemas",
-  "module": "index.ts",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Cinema Radarr",
+  "author": "josluis.lopes@gmail.com",
+  "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.3",
     "@types/rss": "^0.0.32",
-    "bun-types": "latest",
-    "eslint": "^8.42.0",
-    "eslint-config-standard-with-typescript": "^39.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "babel-jest": "^29.3.1",
+    "eslint-config-love": "^47.0.0",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
@@ -25,13 +23,16 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemon": "^3.1.0",
     "rss": "^1.2.2"
   },
   "scripts": {
-    "start": "bun index.ts",
-    "test": "jest --passWithNoTests",
-    "clean": "rm -rf ./lib",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint --fix src/**/*.ts"
+    "start": "npx ts-node src/index.ts",
+    "start:watch": "npx nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "check:type": "tsc --noEmit",
+    "test": "npx jest --silent --passWithNoTests",
+    "lint": "npm run check:type && npx eslint src/**/*.ts",
+    "lint:fix": "npx eslint . --fix",
+    "build": "tsc -p ."
   }
 }
