--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,20 +1,20 @@
-FROM node:20-alpine as app_base
+FROM oven/bun:1.3-alpine AS app_base
 
 # Set the working directory
 WORKDIR /app
 
-COPY ../../package*.json ./
+COPY ../../package.json ./
+COPY ../../bun.lock* ./
 
 # Ports
 ENV PORT=3000
 
 EXPOSE 3000
 
-FROM app_base as dev
+FROM app_base AS dev
 
 # Install the dependencies
-RUN npm install
-RUN npm install -g ts-node nodemon
+RUN bun install
 
 ENV APP_ENV=dev
 ENV NODE_ENV=development
@@ -23,11 +23,10 @@ COPY docker/node/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
-FROM app_base as test
+FROM app_base AS test
 
 # Install the dependencies
-RUN npm ci
-RUN npm install -g ts-node
+RUN bun install --frozen-lockfile
 
 COPY ../../ .
 
@@ -38,27 +37,23 @@ COPY docker/node/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
-FROM app_base as build
+FROM app_base AS build
 
 COPY ../../tsconfig.json .
 COPY ../../src ./src
 COPY ../../bin ./bin
 
-RUN npm install
-RUN npm run build
+RUN bun install
+RUN bun run build
 
-RUN ls -a
-
-FROM app_base as prod
+FROM app_base AS prod
 
 ENV APP_ENV=prod
 ENV NODE_ENV=production
 
-RUN npm ci --omit=dev
+RUN bun install --production --frozen-lockfile
 
 COPY --from=build /app/dist .
-
-RUN npm install -g pm2
 
 COPY docker/node/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
