--- a/package.json
+++ b/package.json
@@ -4,35 +4,28 @@
   "description": "Cinema Radarr",
   "author": "josluis.lopes@gmail.com",
   "license": "MIT",
+  "type": "module",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.3",
     "@types/rss": "^0.0.32",
-    "babel-jest": "^29.3.1",
+    "bun-types": "^1.3.0",
     "eslint-config-love": "^47.0.0",
-    "jest": "^29.6.2",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.1.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.0"
   },
   "dependencies": {
-    "axios": "^1.6.1",
-    "dayjs": "^1.11.10",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "nodemon": "^3.1.0",
+    "axios": "^1.7.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "rss": "^1.2.2"
   },
   "scripts": {
-    "start": "npx ts-node src/index.ts",
-    "start:watch": "npx nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "check:type": "tsc --noEmit",
-    "test": "npx jest --silent --passWithNoTests",
-    "lint": "npm run check:type && npx eslint src/**/*.ts",
-    "lint:fix": "npx eslint . --fix",
-    "build": "tsc -p ."
+    "start": "bun run src/index.ts",
+    "start:watch": "bun run --watch src/index.ts",
+    "check:type": "bun run tsc --noEmit",
+    "test": "bun test --bail",
+    "lint": "bun run check:type && bun run eslint src/**/*.ts",
+    "lint:fix": "bun run eslint . --fix",
+    "build": "bun run tsc -p ."
   }
 }
